--- a/views/newuser.jade
+++ b/views/newuser.jade
@@ -1,7 +1,14 @@
 extends layout
 
 block content
-	a(href='/').btn.btn-warning Home
+	if currentUser.Role==='Admin'
+		.right.dash
+			a(href='/logout').btn.btn-danger Logout
+			a.btn(href='/').btn-warning Home
+		label User: #{currentUser.username}
+		label    |    
+		label Role: #{currentUser.Role}
+
 	h1= title
 	form#AddUser(role="form", method="post",action="/adduser")
 		.form-group
@@ -9,16 +16,16 @@ block content
 			input.form-control(type="text", placeholder="username", name="username")
 		.form-group
 			label(for="useremail") Enter Email Address
-			input.form-control#inputUserEmail(type="text", placeholder="useremail"
+			input.form-control#inputUserEmail(type="text", placeholder="user email"
 				, name="useremail")
 		.form-group
 			label(for="userpassword") Enter Password
 			input.form-control#inputUserPassword(type="password"
-				, placeholder="userpassword", name="userpassword")
+				, placeholder="user password", name="userpassword")
 		.form-group
 			label(for="userpasswordvalid") Confirm Password
 			input.form-control#inputUserPasswordValid(type="password"
-				, placeholder="userpassword", name="userpasswordvalid")
+				, placeholder="confirm user password", name="userpasswordvalid")
 		.form-group
 			label(for="status") Enter Status
 			select(name="status")
