--- a/views/viewproject.jade
+++ b/views/viewproject.jade
@@ -1,7 +1,13 @@
 extends layout
 
 block content
-	a(href='/').btn.btn-warning Home
+	.right.dash
+		a(href='/logout').btn.btn-danger Logout
+		a.btn(href='/').btn-warning Home
+	label User: #{currentUser.username}
+	label    |    
+	label Role: #{currentUser.Role}
+	
 	h1= title
 	each proj, i in projectlist
 		form#editProject(role="form", method="post", action="/editproject?_id=#{proj._id}")
@@ -54,11 +60,11 @@ block content
 			else
 				button#btnEnabler(type="submit", name="enabler") Enable Record Edit
 			button#btnDelete(type="submit", name="delete") Delete Project
-	<br />	
+	br
 	label Related Lists:	
 	.container
 		.right.dash
-			h2 
+			h3 
 				a(href="newtimesheet") +Timesheets
 			if timesheetlist && timesheetlist.length > 0
 				ul
@@ -66,7 +72,7 @@ block content
 						li
 							a(href="/viewtimesheet?_id=#{timesheet._id}")= timesheet.Name
 		.right.dash
-			h2 
+			h3 
 				a(href="newtask") +Tasks	
 			if tasklist && tasklist.length > 0	
 				ul
@@ -74,7 +80,7 @@ block content
 						li
 							a(href="viewtask?_id=#{task._id}")  #{task.Name}
 		.right.dash
-			h2 
+			h3 
 				a(href="/newuser") +Users
 			if userlist && userlist.length > 0	
 				ul
