--- a/views/newtask.jade
+++ b/views/newtask.jade
@@ -17,23 +17,27 @@ block content
 			label(for="duration") Enter estimated duration
 			input.form-control#inputduration(type="text", placeholder="duration", name="duration")
 		.form-group
-			label(for="Project") Enter Project
-			if curRecord && curRecord.length>0
-				select(name="Project")
-					option(value="#{curRecord._id}", selected="selected") #{curRecord.Name}
+			if curRecord.Record && curRecord.Record.length>0 && curRecord.table=='Projects'
+				label(for="Project") Selected Project
+				br
+				a(href="/viewproject?_id=#{curRecord.Record[0]._id}") #{curRecord.Record[0].Name}
 			else
+				label(for="Project") Enter Project
+				br
 				select(name="Project")
+					option(value="", selected="true") --Select Project--
 					each proj, i in projectlist
 						option(value="#{proj._id}") #{proj.Name}
 		.form-group
-			label(for="status") Enter Status
+			label(for="status") Enter Status:
+			br
 			select(name="status")
 				option(value="Initialized" selected="true") Initialized
 				option(value="Approved") Approved
-				option(value="Process") In Progress
+				option(value="In Process") In Progress
 				option(value="Completed") Completed
 				option(value="Inactivate") Inactive
 		button#btnSubmit(type="submit") submit
-		//if messges
-		//	each msg, i in messges
-		//		p #{msg.msg}
+			//if messges
+			//	each msg, i in messges
+			//		p #{msg.msg}
