--- a/views/viewproject.jade
+++ b/views/viewproject.jade
@@ -4,8 +4,8 @@ block content
 	.right.dash
 		a(href='/logout').btn.btn-danger Logout
 		a.btn(href='/').btn-warning Home
-	label User: #{currentUser.username}
-	label    |    
+	a(href="/viewuser?_id=#{currentUser._id}") User: #{currentUser.username}
+	label    -->    
 	label Role: #{currentUser.Role}
 	
 	h1= title
@@ -14,8 +14,7 @@ block content
 			.form-group
 				label Project Name
 				if IsEnabled===true
-					input.form-control(type="text", placeholder="Name", name="projname"
-						, value="#{proj.Name}")
+					input.form-control(type="text", placeholder="Name", name="projname", value="#{proj.Name}")
 				else
 					input.form-control(type="text", placeholder="Name", name="projname"
 						, value="#{proj.Name}", Disabled)					
@@ -41,25 +40,25 @@ block content
 					input.form-control#inputduration(type="text", placeholder="duration"
 						, name="duration", value="#{proj['Estimated Duration']}")
 				else
-					input.form-control#inputduration(type="text", placeholder="duration"
-						, name="duration", value="#{proj['Estimated Duration']}", Disabled)				
+					input.form-control#inputduration(type="text", placeholder="duration", name="duration", value="#{proj['Estimated Duration']}", Disabled)				
 			.form-group
-				label(for="status") Enter Status
 				if IsEnabled===true
-					select(name="status" value="{proj.status}")
-						option(value="Initialized") Initialized
-						option(value="Active") Active
-						option(value="On Hold") On Hold
+					label(for="status") Enter Status
+					select(name="status" value="{proj.Status}")
+						option(value="Initialized", selected=proj.Status=="Initialized") Initialized
+						option(value="Active", selected=proj.Status=="Active") Active
+						option(value="On Hold", selected=proj.Status=="On Hold") On Hold
 				else
-					select(name="status", Disabled)
-						option(value="Initialized") Initialized
-						option(value="Active") Active
-						option(value="On Hold") On Hold
-			if IsEnabled===true
-				button#btnEdit(type="submit", name="edit") Edit Record
-			else
-				button#btnEnabler(type="submit", name="enabler") Enable Record Edit
-			button#btnDelete(type="submit", name="delete") Delete Project
+					label(for="status") Status
+					input.form-control#inputUserStatus(type="text", value="#{proj.Status}"
+						, name="status" Disabled)
+						
+			if currentUser.Role==='Admin'
+				if IsEnabled===true
+					button#btnEdit(type="submit", name="edit") Edit Record
+				else
+					button#btnEnabler(type="submit", name="enabler") Enable Record Edit
+				button#btnDelete(type="submit", name="delete") Delete Project
 	br
 	label Related Lists:	
 	.container
