--- a/views/friend/layout.jade
+++ b/views/friend/layout.jade
@@ -1,11 +1,16 @@
 doctype html
 html(lang="en")
     head
-        title= "Sample layoutfile"
+        // title is a variable passed from the controllers/models
+        title=title
         link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
         link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css')
     body
         block header
+            nav(class="navbar navbar-inverse")
+                div(class="container-fluid")
+                    div(class="navbar-header")
+                        a(class="navbar-brand", href="#") Group Project
         block content
         block footer
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
