--- a/views/friend/layout.jade
+++ b/views/friend/layout.jade
@@ -11,6 +11,18 @@ html(lang="en")
                 div(class="container-fluid")
                     div(class="navbar-header")
                         a(class="navbar-brand", href="#") Group Project
+                    div(class="collapse navbar-collapse",id="navbar-collapse")
+                        ul(class="nav navbar-nav navbar-right")
+                            li(class="dropdown")
+                                a(href="#",class="dropdown-toggle",data-toggle="dropdown",role="button",aria-expanded="false") Friends
+                                    span(class="caret")
+                                ul(class="dropdown-menu",role="menu")
+                                    li
+                                        a(href="/friend/list") List
+                                    li
+                                        a(href="/friend/find") Find
+                                    li
+                                        a(href="/friend/discover") Discover
         block content
         block footer
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
