--- a/views/friend/layout.jade
+++ b/views/friend/layout.jade
@@ -27,3 +27,5 @@ html(lang="en")
         block footer
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
+        // Below JS file is meant only for friend pages
+        script(src="/js/friend.js")
