added h1 to file

--- a/views/home.jade
+++ b/views/home.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  Welcome #{currentUser.username}
+  h1 Welcome #{currentUser.username}
   a(href='/viewuser?_id=#{currentUser._id}').btn.btn-primary View My Account info
   a(href='/tasks').btn.btn-primary View My Tasks
   a(href='/timesheets').btn.btn-primary View My Timesheets
