Added a footer block to common layout so that I can pass the friends client-side functions from my layout files. Also updated my layouts to use the common layout instead of my own. Continuing to work on clientside interactions json interactions.

--- a/views/friend/list.jade
+++ b/views/friend/list.jade
@@ -1,11 +1,11 @@
 //
    Created by zaephor on 3/21/15.
 
-extends layout
+extends ../layout
 block content
     div(class="container")
         div(class="row")
-            h1(class="col-md-2") Friends
+            h1(class="col-md-6") Friends
             nav(class="col-md-3 pull-right")
                 ul(class="pagination pull-right")
                     li
@@ -13,3 +13,5 @@ block content
                     li
                         a(href="#",id="next") Next
         div(class="row existingfriends")
+block footer
+  script(src="/js/friend.js")
