--- a/views/friend/find.jade
+++ b/views/friend/find.jade
@@ -1,7 +1,7 @@
 //
    Created by zaephor on 3/21/15.
 
-extends layout
+extends ../layout
 block content
     div(class="container")
         div(class="row")
@@ -19,3 +19,5 @@ block content
                     li
                         a(href="#",id="next") Next
         div(class="row findfriends")
+block footer
+  script(src="/js/friend.js")
