--- a/views/friend/find.jade
+++ b/views/friend/find.jade
@@ -7,9 +7,9 @@ block content
         div(class="row")
             h1(class="col-md-4") Search for people
             div(class="col-md-4")
-                form(class="form-inline")
+                form(class="form-inline",id="searchForm")
                     div(class="form-group")
-                        input(type="text",class="form-control",id="searchPerson",placeholder="Search name")
+                        input(type="text",class="form-control",id="searchName",placeholder="Search name")
                         button(type="submit",class="btn btn-default")
                             span(class="glyphicon glyphicon-search")
             nav(class="col-md-3 pull-right")
