--- a/views/friend/find.jade
+++ b/views/friend/find.jade
@@ -6,18 +6,12 @@ block content
     div(class="container")
         div(class="row")
             h1(class="col-md-4") Search for people
-            div(class="col-md-4")
+            div(class="col-md-4 pull-right")
                 form(class="form-inline",id="searchForm")
                     div(class="form-group")
                         input(type="text",class="form-control",id="searchName",placeholder="Search name")
                         button(type="submit",class="btn btn-default")
                             span(class="glyphicon glyphicon-search")
-            nav(class="col-md-3 pull-right")
-                ul(class="pagination pull-right")
-                    li
-                        a(href="#",id="prev") Previous
-                    li
-                        a(href="#",id="next") Next
         div(class="row findfriends")
 block footer
   script(src="/js/friend.js")
