--- a/views/newuser.jade
+++ b/views/newuser.jade
@@ -28,9 +28,9 @@ block content
 		.form-group
 			label(for="role") Enter Role
 			select(name="role")
-				option(value="Admin") Admin
-				option(value="Supervisor") Supervisor
-				option(value="Contractor", selected="selected") Contractor
+				option(value="Free") Free Account
+				option(value="Basic") Basic Account
+				option(value="Premium", selected="selected") Premium Account
 				
 		button#btnSubmit(type="submit").btn.btn-danger submit
 		if messges
