--- a/public/css/normal.css
+++ b/public/css/normal.css
@@ -1,6 +1,6 @@
-body {background-color:#252627;}
+//body {background-color:#252627;}
 
-//body {background-color:lightgray;}
+body {background-color:darkblue;}
 
 .btn
 {
