--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,6 @@ doctype html
 html
   head
     title= title
-<<<<<<< HEAD
     script(src="http://code.jquery.com/jquery-2.0.2.js", type="text/javascript")
     script(src="/js/bootstrap.js", type="text/javascript")
     link(href="/css/bootstrap.css", rel="stylesheet")
@@ -18,11 +17,12 @@ html
         div("content"='' "class"='container')
         nav#right
           if (currentUser)
-            label User: #{currentUser.username}
+            label#thisUser User: #{currentUser.username}
             a(href='/logout').btn.btn-danger Logout
             a(href='friends').btn.btn-success Friends
             a(href='likeStuff').btn.btn-success Like Stuff
             a(href='mail').btn.btn-success Mail
+            a(href='/viewuser?_id=#{currentUser._id}').btn.btn-success Account info
           else
             a(href='/Login').btn.btn-warning Log In
             a(href='/newuser').btn.btn-warning Register
@@ -30,21 +30,7 @@ html
         nav#left
           a(href='aboutUs').btn.btn-primary About
           a(href='help').btn.btn-primary Help
-          a(href='/').btn.btn-primary Hangdog Happenstance
+          if (currentUser)
+            a(href='/').btn.btn-primary Hangdog Happenstance
 
     block content
-
-
-
-=======
-    link(href="/css/bootstrap.css", rel="stylesheet")
-    link(rel='stylesheet', type='text/css', href='/css/bootstrap-theme.css', media='screen')
-    link(href='/css/style.css', rel="stylesheet")
-    link(rel='stylesheet', type='text/css', href='/css/justified-nav.css', media='screen')
-    link(rel='stylesheet', type='text/css', href='/css/normal.css', media='all')
-    script(src="http://code.jquery.com/jquery-2.0.2.js", type="text/javascript")
-    script(src="/js/bootstrap.js", type="text/javascript")
-    
-  body
-    block content
->>>>>>> fc7c780187495116a61ca34319c67ddfdc9ebeaa
