altered layout.jade

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,13 +28,9 @@ html
             a(href='/newuser').btn.btn-warning Register
 
         nav#left
-          a(href='aboutUs').btn.btn-primary About
+          a(href='aboutUs').btn.btn-primary About Us
           a(href='help').btn.btn-primary Help
-<<<<<<< HEAD
           if (currentUser)
             a(href='/').btn.btn-primary Hangdog Happenstance
-=======
-          a(href='/').btn.btn-primary Hangdog Happenstance
->>>>>>> 637559fa3ce6cb77bc2adce6d74196327db553e9
 
     block content
