--- a/views/mail.jade
+++ b/views/mail.jade
@@ -1,4 +1,29 @@
 extends layout
-
 block content
-  h1 Welcome To the mail page
+	div(class='container')
+		ul(class='nav nav-pills',role="tablist")
+			li(role="presentation",class="active")
+				a(href="mail") Messages
+					-var n = 0;
+					each message in mail
+						if !message.Read
+							- n++;
+					span(class="badge")=n
+			li(role="presentation")
+				a(href="compose") Compose
+
+		div(class='jumbotron')
+			each message in mail
+				a(href="#",class='list-group-item' id=message.From)
+					div(class='container')
+						div(class='col-md-10')
+							h4(class='list-group-item-heading text-left')=message.From
+							h5(class='list-group-item-heading text-left')=message.Subject
+							- var len = message.Body.length - 1;
+							- console.log(message.Body[len].id);
+							p(class='list-group-item-text text-left')=message.Body[len].id
+						div(class='col-md-2')
+							if !message.Read
+								span(class="badge") New
+							h5(class='list-group-item-text text-heading')=message.Date
+							h5(class='list-group-item-text text-heading')=message.Time
