--- a/views/home.jade
+++ b/views/home.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Welcome #{currentUser.username}
-  a(href='/timesheets').btn.btn-primary View My Timesheets
+  //a(href='/timesheets').btn.btn-primary View My Timesheets
   br
   br
   a(href='/likeStuff').btn.btn-warning See Dashboard
