--- a/views/mail.jade
+++ b/views/mail.jade
@@ -14,7 +14,7 @@ block content
 
 		div(class='jumbotron')
 			each message in mail
-				a(href="#",class='list-group-item' id=message.From)
+				a(href="respond?_id=#{message._id}",class='list-group-item' id=message.From).btn.btn-primary reply
 					div(class='container')
 						div(class='col-md-10')
 							h4(class='list-group-item-heading text-left')=message.From
