Added functionality to allow a message to be marked as read when a new one is send out.

--- a/views/viewotheruser.jade
+++ b/views/viewotheruser.jade
@@ -20,3 +20,4 @@ block content
 				input.form-control#inputUserStatus(type="text", value="#{user.Role}", name="role" Disabled)										
 			.form-group
 				button#btnUnlock(type="submit", name="befriend").btn.btn-danger Friend Request
+				button#btnUnlock(type="submit", name="message").btn.btn-danger Send a Message
