--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,7 +91,7 @@ th {
 }
 header {
   padding: 1px 0 1px 0;
-  background: black;
+  background: blue;
   overflow: auto;
   text-align: center;
   border-bottom: 1px solid #ddd;
