--- a/views/friend/find.jade
+++ b/views/friend/find.jade
@@ -3,6 +3,15 @@
 
 extends ../layout
 block content
+    div(class='container')
+        ul(class='nav nav-pills',role="tablist")
+            li(role="presentation",class="active")
+                a(href="/friend/discover") Discover Friends
+            li(role="presentation")
+                a(href="/friend/find") find Friends
+            li(role="presentation")
+                a(href="/friend/list") Friends list
+                
     div(class="container")
         div(class="row")
             h1(class="col-md-4") Search for people
