--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,20 +18,19 @@ html
         nav#right
           if (currentUser)
             label#thisUser User: #{currentUser.username}
-            a(href='/logout').btn.btn-danger Logout
-            a(href='friends').btn.btn-success Friends
-            a(href='likeStuff').btn.btn-success Like Stuff
-            a(href='mail').btn.btn-success Mail
+            a(href='http://localhost:2200/logout').btn.btn-danger Logout
+            a(href='http://localhost:2200/friend/discover').btn.btn-success Friends
+            a(href='http://localhost:2200/likeStuff').btn.btn-success Like Stuff
+            a(href='http://localhost:2200/mail').btn.btn-success Mail
             a(href='/viewuser?_id=#{currentUser._id}').btn.btn-success Account info
           else
-            a(href='/Login').btn.btn-warning Log In
-            a(href='/newuser').btn.btn-warning Register
+            a(href='http://localhost:2200/Login').btn.btn-warning Log In
+            a(href='http://localhost:2200/newuser').btn.btn-warning Register
 
         nav#left
-          a(href='aboutUs').btn.btn-primary About Us
-          a(href='help').btn.btn-primary Help
+          a(href='http://localhost:2200/aboutUs').btn.btn-primary About Us
+          a(href='http://localhost:2200/help').btn.btn-primary Help
           if (currentUser)
             a(href='/').btn.btn-primary Hangdog Happenstance
 
     block content
-    block footer
